# llm-self-model-capstone

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATA_WORKFLOW.md  DEVOPS.md  MASTER_REQUIREMENTS.md  Makefile  PILOT_MASTER_REQUIREMENTS.md  PILOT_PROGRAM_DASHBOARD.html  PILOT_PROGRAM_GRAPH.md  PLAN.md  README.md  VISION.md  ai-sdd  capstone-experiment.flowchart.md  cpp-motor.md  llm-self-model-capstone-dashboard.html  motion-nav.md  plan.html  pyproject.toml  repo.html  self-model-loop-dashboard.html  vex-v5-self-model-premise.html
contracts/: Makefile  parts_catalog.json  pyproject.toml
contracts/fixtures/: control_command_flywheel_cycle.jsonl  control_command_grab_cycle.jsonl  control_command_rejections.jsonl  pilot_assertion_examples.jsonl  pilot_decision_examples.jsonl  pilot_observation_example.json  pilot_skill_command_examples.jsonl  pilot_trace_example.jsonl  self_model_gen0.json  self_model_gen1.json  session_example.jsonl
contracts/schemas/: ack_line.json  contract_line.json  control_command.json  pilot_assertion.json  pilot_decision.json  pilot_observation.json  pilot_skill_command.json  pilot_trace_record.json  score_contract.json  self_model.json  task_envelope.json  task_outline.json
contracts/scripts/: m1_review.py
contracts/src/contracts/: __init__.py  adapters.py  catalog.py  contract_line.py  control_command.py  motor_telemetry.py  parts_catalog.py  pilot.py  schema.py  self_model.py  task_contracts.py  task_envelope.py  validate.py  vocabulary.py
contracts/tests/: test_adapters.py  test_contract_line.py  test_control_command.py  test_m1_handshake.py  test_motor_telemetry.py  test_parts_catalog.py  test_pilot_schemas.py  test_self_model.py  test_smoke.py  test_task_contracts.py  test_task_envelope.py  test_validate.py
operator/: Makefile  pyproject.toml  ruff.toml
operator/docs/: README.md  llm_critic_architecture.md  team_update_2026_06_23.html
operator/fixtures/: outline_align_only.json
operator/src/operator_llm/: __init__.py  validate.py
operator/src/self_model_operator/: __init__.py
operator/tests/: test_fixture_loader.py  test_packet_builder.py
pilot/: Makefile  pyproject.toml
pilot/docs/: pm3-live-observation.md  pm4-one-skill-execution.md
pilot/src/pilot/: __init__.py  assertions.py  cli.py  decision.py  execution.py  executor.py  live_observation.py  observation.py  observe.py  ros_execution.py  run_logger.py  safety.py  skill_cli.py  skills.py  trace.py
pilot/tests/: test_assertions.py  test_cli.py  test_decision_adapter.py  test_decision_parser.py  test_decision_prompt.py  test_execution.py  test_executor.py  test_live_observation.py  test_observation_builder.py  test_observation_cache.py  test_observe_cli.py  test_ros_execution.py  test_run_logger.py  test_safety.py  test_skill_cli.py  test_skills.py
robot/ros2-runtime/: IMPROVEMENT_LOOP.md  Makefile  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
robot/ros2-runtime/config/: apriltag_36h11.yaml  imx708_wide_640x360.yaml  imx708_wide_640x480.yaml
robot/ros2-runtime/config/maps/: gen0-grab-toss-v1.json  gen1-corner-base-v1.json  table-grab-toss-v1.json
robot/ros2-runtime/docs/: ARCHITECTURE.md  BRAIN_INTERFACE.md  PROTOCOL.md  RUNBOOK.md  USAGE_GUIDE.md  VISION_COORDINATE_MAP.md
robot/ros2-runtime/docs/runbook/: 01-daily-ops.md  02-verification.md  03-recording.md  04-troubleshooting.md  05-reboot-and-workspace.md  06-logs.md  07-pros-upload.md  08-pi-setup-and-rebuild.md
robot/ros2-runtime/fixtures/: align_to_tag_success_bundle.json  contract_align_each_apriltag_once.json  contract_align_minimal.json  contract_deliver_ball.json  outline_align_each_apriltag_once.json  outline_align_only.json  outline_deliver_ball.json  task_deliver_ball.json
robot/ros2-runtime/launch/: vexy.launch.py  vexy_demo_scene.launch.py
robot/ros2-runtime/operator/: GUIDEBOOK.md
robot/ros2-runtime/scripts/: setup_pi.sh
robot/ros2-runtime/src/vexy_ros/: agent_scene.py  agent_scene_node.py  align_to_tag.py  align_to_tag_node.py  bridge_capability_probe.py  bridge_demux.py  bridge_protocol.py  camera_calibration_capture.py  deliver_ball.py  evidence_export.py  image_writer_node.py  localization_benchmark.py  object_detection.py  object_indication_node.py  object_overlay_node.py  object_track_node.py  object_tracking.py  observation_proof.py  operator_annotation.py  operator_run_capture.py  pickup_goal_loop.py  proof_runner.py  scene_map_node.py  survey_scan.py  survey_scan_node.py  tag_action_proof.py  task_plan.py  task_plan_node.py  (+8 more)
robot/ros2-runtime/tests/: test_agent_scene.py  test_align_to_tag.py  test_bridge_capability_probe.py  test_bridge_demux.py  test_camera_axis_calibration.py  test_camera_calibration_capture.py  test_deliver_ball.py  test_evidence_export.py  test_image_conversion.py  test_launch_contract.py  test_live_align.py  test_live_align_each_apriltag.py  test_live_deliver.py  test_live_pickup_ball.py  test_localization_benchmark.py  test_object_detection.py  test_object_overlay.py  test_object_tracking.py  test_observation_proof.py  test_operator.py  test_operator_annotation.py  test_operator_fixtures.py  test_pickup_goal_loop.py  test_static_claw_ball_calibration.py  test_survey_scan.py  test_tag_action_proof.py  test_task_plan.py  test_telemetry_capture.py  test_vision_map.py  test_visual_pickup_probe.py  test_visual_pickup_proof_verify.py  test_yellow_ball_detector.py
robot/v5-brain/: BRINGUP.md  SLOT_MANIFEST.md  TOOLCHAIN.md  pyproject.toml
robot/v5-brain/driver_telemetry/: README.md  project.pros
robot/v5-brain/pros_bridge/: Makefile  README.md  project.pros
robot/v5-brain/v5-test/: .gitignore  project.pros
self_model_generator/: Makefile  pyproject.toml
self_model_generator/docs/: README.md  llm_critic_architecture.md
self_model_generator/src/self_model_generator/: __init__.py  fixture_loader.py  gap_analyzer.py  loop_closure.py  loop_runner.py  packet_builder.py  validate.py
self_model_generator/tests/: test_fixture_loader.py  test_gap_analyzer.py  test_loop_closure.py  test_loop_runner.py  test_packet_builder.py
(+763 files in other folders)
