[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contracts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.12,<3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/contracts"]

[tool.uv]
dev-dependencies = ["pytest>=8"]
