[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operator-llm-critic"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.12,<3",
    "reactivex>=4.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.14"]

[tool.hatch.build.targets.wheel]
packages = ["src/operator_llm"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.14"]
