[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-model-operator"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = ["contracts", "pydantic>=2.12,<3"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.14"]

[tool.uv.sources]
contracts = { path = "../contracts", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/self_model_operator"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.14"]

[tool.ruff]
line-length = 100
target-version = "py312"
