[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilot"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.12,<3",
]

[project.scripts]
pilot = "pilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pilot"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.14"]

[tool.ruff]
target-version = "py311"
line-length = 100
