<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vexy_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy runtime for VEX V5 + Raspberry Pi 5 coprocessor</description>
  <maintainer email="dt@davidtaylor.codes">David Taylor</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>camera_calibration</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
